# pyceres

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  format.sh  pyproject.toml  setup.py
.github/workflows/: build.yml  code-formatting.yml
_pyceres/: bindings.cc  glog.cc  glog.h  helpers.h  log_exceptions.h  logging.h
_pyceres/core/: bindings.cc  bindings.h  callbacks.cc  callbacks.h  cost_functions.cc  cost_functions.h  covariance.cc  covariance.h  crs_matrix.h  loss_functions.cc  loss_functions.h  manifold.cc  manifold.h  parameterization.cc  problem.cc  problem.h  solver.cc  solver.h  types.cc  types.h  wrappers.h
_pyceres/factors/: bindings.cc  bindings.h  bundle.cc  bundle.h  common.cc  common.h  pose_graph.cc  pose_graph.h
ci/: install-ceres-centos.sh  install-ceres-macos.sh  install-ceres-windows.ps1  vcpkg-dependencies.txt
examples/: curve_fitting.py  curve_fitting_autodiff.py  hello.py  powells.py  powells_autodiff.py  robust_curve_fitting_loss.py  test_BA.ipynb  test_PGO.ipynb  test_product_manifold.py  test_python_cost.py
examples/.ipynb_checkpoints/: test_BA-checkpoint.ipynb
