[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11==2.11.1"]
build-backend = "scikit_build_core.build"

[project]
name = "pyceres"
version = "2.2"
description="Factor graph optimization with Ceres, in Python"
readme = "README.md"
authors = [
  { name = "Paul-Edouard Sarlin", email = "psarlin@ethz.ch" },
  { name = "Philipp Lindenberger", email = "plindenbe@ethz.ch" },
]
license = {text = "Apache-2.0"}
urls = {Repository = "https://github.com/cvg/pyceres"}
requires-python = ">=3.7"
dependencies = ["numpy"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.cibuildwheel]
build = "cp3{8,9,10,11,12}-{macosx,manylinux,win}*"
archs = ["auto64"]
test-command = "python -c \"import pyceres; print(pyceres.__version__)\""

[tool.cibuildwheel.environment]
VCPKG_COMMIT_ID = "e01906b2ba7e645a76ee021a19de616edc98d29f"

[tool.cibuildwheel.linux]
before-all = "{package}/ci/install-ceres-centos.sh"

[tool.cibuildwheel.macos]
before-all = "{package}/ci/install-ceres-macos.sh"

[tool.cibuildwheel.windows]
before-all = "powershell -File {package}/ci/install-ceres-windows.ps1"
before-build = "pip install delvewheel"
