[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11==3.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pyceres"
version = "2.6"
description="Factor graph optimization with Ceres, in Python"
readme = "README.md"
authors = [
  { name = "Paul-Edouard Sarlin", email = "paul.edouard.sarlin@gmail.com" },
  { name = "Philipp Lindenberger", email = "plindenbe@ethz.ch" },
  { name = "Shaohui Liu", email = "b1ueber2y@gmail.com" },
]
license = {text = "Apache-2.0"}
urls = {Repository = "https://github.com/cvg/pyceres"}
requires-python = ">=3.9"
dependencies = ["numpy"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.cibuildwheel]
build = "cp3{9,10,11,12,13,14}-{macosx,manylinux,win}*"
archs = ["auto64"]
test-command = "python -c \"import pyceres; print(pyceres.__version__)\""

[tool.cibuildwheel.environment]
VCPKG_COMMIT_ID = "912567f6fdd1883e07b070dcc0aa67cec072042a"

[tool.cibuildwheel.linux]
before-all = "{package}/ci/install-ceres-almalinux.sh"

[tool.cibuildwheel.macos]
before-all = "{package}/ci/install-ceres-macos.sh"

[tool.cibuildwheel.windows]
before-all = "powershell -File {package}/ci/install-ceres-windows.ps1"
before-build = "pip install delvewheel"
